[build-system]
requires = ["setuptools ~= 75.7.0", "setuptools_scm ~= 8.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.setuptools.package-data]
resolwe_bio = [
    "descriptors/*.yml",
    "fixtures/*.yaml",
    "kb/migrations/*.sql",
    "migrations/*.sql",
    "processes/**/*.yml",
    "processes/**/*.py",
    "tools/*.py",
    "tools/*.R",
    "tools/*.sh",
]

[project]
name = "resolwe_bio"
description = "Bioinformatics pipelines for the Resolwe platform"
readme = "README.rst"
dynamic = ["version"]
authors = [{ name = "Genialis, Inc", email = "dev-team@genialis.com" }]
license = { text = "Apache License (2.0)" }
requires-python = ">=3.10, <3.14"
keywords = [
    "bioinformatics",
    "resolwe",
    "bio",
    "pipelines",
    "dataflow",
    "django",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "Django~=5.2.0",
    "djangorestframework~=3.16.0",
    "django-filter~=25.1",
    "resolwe==45.*",
    "wrapt~=1.17.2",
]

[project.optional-dependencies]
test = [
    "build==1.2.2",
    "black==25.1.0",
    "check-manifest",
    "colorama",
    "django-stubs>=5.2.0",
    "django-filter-stubs>=0.1.3",
    # Temporarily disabled due to compatibility issues with mypy.
    # "djangorestframework-stubs[compatible-mypy]>=3.15.2",
    "daphne",
    "flake8>=7.2.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pydocstyle~=6.3.0",
    "setuptools_scm",
    "six==1.17",
    "tblib>=3.1.0",
    "twine==6.1.0",
]
docs = ["daphne", "Sphinx~=8.2.3", "sphinx-rtd-theme==3.0.2", "pyasn1>=0.6.1"]
package = ["twine", "wheel", "check-manifest", "setuptools_scm"]

[project.urls]
Homepage = "https://github.com/genialis/resolwe-bio"
Documentation = "https://resolwe-bio.readthedocs.io/en/latest/"
Repository = "https://github.com/genialis/resolwe-bio"

[tool.black]
target-version = ["py36", "py37", "py38", "py39", "py310", "py311"]

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
check_untyped_defs = true

[tool.django-stubs]
django_settings_module = "tests.settings"
